Update aria-labels for course map links

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <nav class="vbt-grid">
     <!-- מפות הקורס -->
     <div class="vbt-card mind">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/map-201025-RTL.html" target="_blank" rel="noopener" aria-label="פתיחת מפת הקורס (RTL · 20/10/25) בטאב חדש">
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/map-201025-RTL.html" target="_blank" rel="noopener" aria-label="פתיחת מפת הקורס (RTL - 20/10/25) בטאב חדש">
         <div class="row"><span class="icon">🧠</span><span class="title">מפת הקורס · RTL (20/10/25)</span></div>
         <div class="desc">גרסת RTL עדכנית של מפת הקורס.</div><span class="chev">›</span>
       </a>
@@ -90,7 +90,7 @@
 
     <!-- 1.3 · גילה זקס -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_1.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 1.3: גילה זקס, בטאב חדש">
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_1.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים - רכיב 1.3: גילה זקס, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">1.3 · גילה זקס</span></div>
         <div class="desc">דף מונחים של רכיב 1.3 - גילה זקס.</div><span class="chev">›</span>
       </a>
@@ -102,7 +102,7 @@
 
     <!-- 1.7 · דיין בינשטוק -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_1.7.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 1.7: דיין בינשטוק, בטאב חדש">
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_1.7.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים - רכיב 1.7: דיין בינשטוק, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">1.7 · דיין בינשטוק</span></div>
         <div class="desc">דף מונחים של רכיב 1.7 - דיין בינשטוק.</div><span class="chev">›</span>
       </a>
@@ -114,7 +114,7 @@
 
     <!-- 2.3 · חנוך בן פזי -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_2.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 2.3: חנוך בן פזי, בטאב חדש">
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_2.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים - רכיב 2.3: חנוך בן פזי, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">2.3 · חנוך בן פזי</span></div>
         <div class="desc">דף מונחים של רכיב 2.3 - חנוך בן פזי.</div><span class="chev">›</span>
       </a>
@@ -126,7 +126,7 @@
 
     <!-- 2.8 · רפאל צארום -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_2.8.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 2.8: רפאל צארום, בטאב חדש">
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_2.8.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים - רכיב 2.8: רפאל צארום, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">2.8 · רפאל צארום</span></div>
         <div class="desc">דף מונחים של רכיב 2.8 - רפאל צארום.</div><span class="chev">›</span>
       </a>
@@ -138,7 +138,7 @@
 
     <!-- 2.9 · מרציונליזם אוניברסלי לברית חברתית -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_2.9.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 2.9: מרציונליזם אוניברסלי לברית חברתית, בטאב חדש">
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_2.9.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים - רכיב 2.9: מרציונליזם אוניברסלי לברית חברתית, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">2.9 · מרציונליזם אוניברסלי לברית חברתית</span></div>
         <div class="desc">דף מונחים של רכיב 2.9 - מרציונליזם אוניברסלי לברית חברתית.</div><span class="chev">›</span>
       </a>
@@ -150,7 +150,7 @@
 
     <!-- 3.3 · הרב האריס -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_3.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 3.3: הרב האריס, בטאב חדש">
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_3.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים - רכיב 3.3: הרב האריס, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">3.3 · הרב האריס</span></div>
         <div class="desc">דף מונחים של רכיב 3.3 - הרב האריס.</div><span class="chev">›</span>
       </a>
@@ -162,7 +162,7 @@
 
     <!-- 3.6 · חנוך בן פזי -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_3.6.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 3.6: חנוך בן פזי, בטאב חדש">
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_3.6.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים - רכיב 3.6: חנוך בן פזי, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">3.6 · חנוך בן פזי</span></div>
         <div class="desc">דף מונחים של רכיב 3.6 - חנוך בן פזי.</div><span class="chev">›</span>
       </a>
@@ -174,7 +174,7 @@
 
     <!-- 3.7 · טקסטים קשים בתורה -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_3.7.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 3.7: טקסטים קשים בתורה, בטאב חדש">
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_3.7.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים - רכיב 3.7: טקסטים קשים בתורה, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">3.7 · טקסטים קשים בתורה</span></div>
         <div class="desc">דף מונחים של רכיב 3.7 - טקסטים קשים בתורה.</div><span class="chev">›</span>
       </a>
@@ -186,7 +186,7 @@
 
     <!-- 4.13 · טכנולוגיה ומדע - צבן -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_4.13.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 4.13: טכנולוגיה ומדע - צבן, בטאב חדש">
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_4.13.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים - רכיב 4.13: טכנולוגיה ומדע - צבן, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">4.13 · טכנולוגיה ומדע - צבן</span></div>
         <div class="desc">דף מונחים של רכיב 4.13 - טכנולוגיה ומדע - צבן.</div><span class="chev">›</span>
       </a>
@@ -198,7 +198,7 @@
 
     <!-- 4.3 · ריינהולד -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_4.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 4.3: ריינהולד, בטאב חדש">
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_4.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים - רכיב 4.3: ריינהולד, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">4.3 · ריינהולד</span></div>
         <div class="desc">דף מונחים של רכיב 4.3 - ריינהולד.</div><span class="chev">›</span>
       </a>
@@ -210,7 +210,7 @@
 
     <!-- 4.6 · השפעת רוזנצווייג -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_4.6.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 4.6: השפעת רוזנצווייג, בטאב חדש">
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_4.6.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים - רכיב 4.6: השפעת רוזנצווייג, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">4.6 · השפעת רוזנצווייג</span></div>
         <div class="desc">דף מונחים של רכיב 4.6 - השפעת רוזנצווייג.</div><span class="chev">›</span>
       </a>
@@ -222,7 +222,7 @@
 
     <!-- 5.1 · דת ומדע -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_5.1.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 5.1: דת ומדע, בטאב חדש">
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_5.1.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים - רכיב 5.1: דת ומדע, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">5.1 · דת ומדע</span></div>
         <div class="desc">דף מונחים של רכיב 5.1 - דת ומדע.</div><span class="chev">›</span>
       </a>
@@ -234,7 +234,7 @@
 
     <!-- 5.6 · ג'ואנה בנהרוש -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_5.6.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 5.6: ג'ואנה בנהרוש, בטאב חדש">
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_5.6.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים - רכיב 5.6: ג'ואנה בנהרוש, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">5.6 · ג'ואנה בנהרוש</span></div>
         <div class="desc">דף מונחים של רכיב 5.6 - ג'ואנה בנהרוש.</div><span class="chev">›</span>
       </a>
@@ -246,7 +246,7 @@
 
     <!-- 5.9 · לורד וולפסון -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_5.9.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 5.9: לורד וולפסון, בטאב חדש">
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_5.9.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים - רכיב 5.9: לורד וולפסון, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">5.9 · לורד וולפסון</span></div>
         <div class="desc">דף מונחים של רכיב 5.9 - לורד וולפסון.</div><span class="chev">›</span>
       </a>
@@ -258,7 +258,7 @@
 
     <!-- 6.11 · ג'ואן גרינאוויי -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_6.11.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 6.11: ג'ואן גרינאוויי, בטאב חדש">
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_6.11.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים - רכיב 6.11: ג'ואן גרינאוויי, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">6.11 · ג'ואן גרינאוויי</span></div>
         <div class="desc">דף מונחים של רכיב 6.11 - ג'ואן גרינאוויי.</div><span class="chev">›</span>
       </a>
@@ -270,7 +270,7 @@
 
     <!-- 6.12 · הרב אפשטיין - מונחים -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_6.12.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 6.12: הרב אפשטיין - מונחים, בטאב חדש">
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_6.12.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים - רכיב 6.12: הרב אפשטיין - מונחים, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">6.12 · הרב אפשטיין - מונחים</span></div>
         <div class="desc">דף מונחים של רכיב 6.12 - הרב אפשטיין.</div><span class="chev">›</span>
       </a>
@@ -282,7 +282,7 @@
 
     <!-- 6.3 · אדם פרזינגר -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_6.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 6.3: אדם פרזינגר, בטאב חדש">
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_6.3.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים - רכיב 6.3: אדם פרזינגר, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">6.3 · אדם פרזינגר</span></div>
         <div class="desc">דף מונחים של רכיב 6.3 - אדם פרזינגר.</div><span class="chev">›</span>
       </a>
@@ -294,7 +294,7 @@
 
     <!-- 6.8 · חיים נריה -->
     <div class="vbt-card terms">
-      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_6.8.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים – רכיב 6.8: חיים נריה, בטאב חדש">
+      <a class="vbt-main" href="https://kereneis-boop.github.io/rabbi-sacks/Terms_6.8.html" target="_blank" rel="noopener" aria-label="פתיחת דף המונחים - רכיב 6.8: חיים נריה, בטאב חדש">
         <div class="row"><span class="icon">📚</span><span class="title">6.8 · חיים נריה</span></div>
         <div class="desc">דף מונחים של רכיב 6.8 - חיים נריה.</div><span class="chev">›</span>
       </a>
