--- a/map-271025.html
+++ b/map-271025.html
@@ -134,7 +134,7 @@
         "label": "0 - ברוכים הבאים",
         "children": [
           { "label": "# הקדמה" },
-          { "label": "\"1. למה הרב זקס, למה עכשיו?\n2. מפת הקורס\n3. סילבוס\"" },
+          { "label": "1. למה הרב זקס, למה עכשיו?\n2. מפת הקורס\n3. סילבוס" },
           { "label": "כיצד לסיים את הקורס בהצלחה?" },
           { "label": "ערכים, זהות וחינוך יהודי במאה ה־21" }
         ]
